// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Button Button primary with colors 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FF1900;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  background-color: hsl(5.899999999999977,100%,45%);
}

.c5:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.cta
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c3"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.negative
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c5"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button secondary with colors 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  color: hsl(223.5,100%,40%);
}

.c3:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c3:active {
  color: hsl(223.5,100%,35%);
}

.c3:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #FF1900;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #FF1900;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  color: hsl(5.899999999999977,100%,40%);
}

.c5:hover::before {
  border-color: hsl(5.899999999999977,100%,40%);
}

.c5:active {
  color: hsl(5.899999999999977,100%,35%);
}

.c5:active::before {
  border-color: hsl(5.899999999999977,100%,35%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.cta
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c3"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.negative
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c5"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button that is full width 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

<button
  className="NormalizedButton__Button-ey7f5x-0 c0"
  onClick={[Function]}
  type="button"
>
  <span>
    <span
      className="c1"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Button which sets focus on another button 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c0 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c2:hover {
  background-color: hsl(223.5,100%,45%);
}

.c2:active {
  background-color: hsl(223.5,100%,40%);
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FF1900;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4:hover {
  background-color: hsl(5.899999999999977,100%,45%);
}

.c4:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="c3"
        >
          Click to focus
        </span>
      </span>
    </button>
  </div>
  <div
    className="c1"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 c4"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="c3"
        >
          Focus me
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with different variants 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  color: hsl(223.5,100%,40%);
}

.c5:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c5:active {
  color: hsl(223.5,100%,35%);
}

.c5:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      primary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c3"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      secondary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c5"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      neutral
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c6"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with loading state 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Primary
    </span>
  </div>,
  .c5 {
  display: inline-block;
  -webkit-animation: spinner 1s linear infinite;
  animation: spinner 1s linear infinite;
}

.c6 {
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  background-color: hsl(223.5,100%,45%);
}

.c7:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-m-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-m-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-m-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-m-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-l-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-l-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-l-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-l-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Primary with custom color
    </span>
  </div>,
  .c5 {
  display: inline-block;
  -webkit-animation: spinner 1s linear infinite;
  animation: spinner 1s linear infinite;
}

.c6 {
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FF1900;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  background-color: hsl(5.899999999999977,100%,45%);
}

.c3:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #FF1900;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  background-color: hsl(5.899999999999977,100%,45%);
}

.c7:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-m-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-m-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-m-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-m-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-l-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-l-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-l-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-l-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Secondary
    </span>
  </div>,
  .c5 {
  display: inline-block;
  -webkit-animation: spinner 1s linear infinite;
  animation: spinner 1s linear infinite;
}

.c6 {
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  color: hsl(223.5,100%,40%);
}

.c3:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c3:active {
  color: hsl(223.5,100%,35%);
}

.c3:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  color: hsl(223.5,100%,40%);
}

.c7:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c7:active {
  color: hsl(223.5,100%,35%);
}

.c7:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-m-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-m-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-m-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-m-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-l-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-l-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-l-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-l-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Secondary with custom color
    </span>
  </div>,
  .c5 {
  display: inline-block;
  -webkit-animation: spinner 1s linear infinite;
  animation: spinner 1s linear infinite;
}

.c6 {
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #FF1900;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #FF1900;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  color: hsl(5.899999999999977,100%,40%);
}

.c3:hover::before {
  border-color: hsl(5.899999999999977,100%,40%);
}

.c3:active {
  color: hsl(5.899999999999977,100%,35%);
}

.c3:active::before {
  border-color: hsl(5.899999999999977,100%,35%);
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #FFFFFF;
  color: #FF1900;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #FF1900;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  color: hsl(5.899999999999977,100%,40%);
}

.c7:hover::before {
  border-color: hsl(5.899999999999977,100%,40%);
}

.c7:active {
  color: hsl(5.899999999999977,100%,35%);
}

.c7:active::before {
  border-color: hsl(5.899999999999977,100%,35%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-m-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-m-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-m-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-m-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="c5"
            >
              <svg
                className="c6"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-l-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-l-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-l-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-l-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  @media (min-width:760px) {

}

<button
    onClick={[Function]}
    type="button"
  >
    toggle loading
  </button>,
]
`;

exports[`Storyshots Molecules | Button Button with size modified 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Primary
    </span>
  </div>,
  .c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              Medium
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c6"
            >
              Large
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Secondary
    </span>
  </div>,
  .c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  color: hsl(223.5,100%,40%);
}

.c3:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c3:active {
  color: hsl(223.5,100%,35%);
}

.c3:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  color: hsl(223.5,100%,40%);
}

.c5:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c5:active {
  color: hsl(223.5,100%,35%);
}

.c5:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              Medium
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c6"
            >
              Large
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Button Button with type modified 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Reset
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c3"
        onClick={[Function]}
        type="reset"
      >
        <span>
          <span
            className="c4"
          >
            Reset
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Submit
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c3"
        onClick={[Function]}
        type="submit"
      >
        <span>
          <span
            className="c4"
          >
            Submit
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Buttons composed in a group 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
}

.c0 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c2:hover {
  background-color: hsl(223.5,100%,45%);
}

.c2:active {
  background-color: hsl(223.5,100%,40%);
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4:hover {
  color: hsl(223.5,100%,40%);
}

.c4:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c4:active {
  color: hsl(223.5,100%,35%);
}

.c4:active::before {
  border-color: hsl(223.5,100%,35%);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="submit"
    >
      <span>
        <span
          className="c3"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
  <div
    className="c1"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 c4"
      onClick={[Function]}
      type="reset"
    >
      <span>
        <span
          className="c3"
        >
          Reset
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Default usage 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

<button
  className="NormalizedButton__Button-ey7f5x-0 c0"
  onClick={[Function]}
  type="button"
>
  <span>
    <span
      className="c1"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Disabled Button with different variants 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      primary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c3"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      secondary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c5"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      neutral
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 c6"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;
